# data-agent

./: README.md  ai-agent-terraform-json-prd.md  pyproject.toml
app/agent/: graph.py  llm.py  state.py
app/agent/nodes/: add_extra_context.py  correct_sql.py  execute_sql.py  extract_keywords.py  filter_metric.py  filter_table.py  generate_sql.py  merge_retrieved_info.py  recall_column.py  recall_metric.py  recall_value.py  validate_sql.py
app/api/: dependencies.py
app/api/routers/: query_router.py
app/clients/: embedding_client_manager.py  es_client_manager.py  mysql_client_manager.py  qdrant_client_manager.py
app/conf/: app_config.py  config_loader.py
app/config/: app_config.py
app/core/: context.py  lifespan.py  log.py
app/prompt/: prompt_loader.py
app/repositories/es/: value_es_repository.py
app/repositories/mysql/dw/: dw_mysql_repository.py
app/repositories/mysql/meta/: meta_mysql_repository.py
app/repositories/mysql/meta/mappers/: metric_info_mapper.py
app/repositories/qdrant/: column_qdrant_repository.py  metric_qdrant_repository.py
app/scripts/: build_meta_knowledge.py
app/services/: meta_knowledge_service.py  query_service.py
conf/: app_config.yaml
docker/: docker-compose.yaml
